fixed collapsed sidebar icon size (#43)

--- a/frontend/src/assets/sass/layout.scss
+++ b/frontend/src/assets/sass/layout.scss
@@ -132,6 +132,7 @@
 
 .comp-side-bar.collapsed > ul > li > i.bi {
   margin-left: 25%;
+  font-size: 22px;
 }
 
 .comp-nav-item-list {
